--- a/my_env/educa/courses/templates/courses/manage/module/content_list.html
+++ b/my_env/educa/courses/templates/courses/manage/module/content_list.html
@@ -37,8 +37,9 @@
         {% for content in module.contents.all %}
           <div data-id="{{ content.id }}">
             {% with item=content.item %}
-              <p>{{ item }}</p>
-              <a href="#">
+              <p>{{ item }}  ({{ item|model_name }})</p>
+              <a href=="{% url "module_content_update" module.id item|model_name
+                        item.id %}">
                 Edit
               </a>
               <form action="{% url "module_content_delete" content.id %}" method="post">
